Compile introductions and implement exercises

--- a/workshops/clustering/043Clustering_Density.ipynb
+++ b/workshops/clustering/043Clustering_Density.ipynb
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.  2.  2.  2.  2.  2.  1.  1. -1. -1.]\n"
+      "[ 1.  1.  1.  1.  1.  1.  2.  2. -1. -1.]\n"
      ]
     }
    ],
@@ -246,6 +246,18 @@
    "source": [
     "%store new_assignation_density"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
