--- a/workshops/trees/054Decision_trees_Quality.ipynb
+++ b/workshops/trees/054Decision_trees_Quality.ipynb
@@ -15,12 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store -r labels\n",
+    "labels=None\n",
+    "data_set=None\n",
     "%store -r data_set\n",
+    "%store -r labels\n",
     "\n",
     "test_labels = [1,1,-1,-1,1,1,1,-1]\n",
     "test_data_set = [[1,1,2,2],[3,2,1,2],[2,3,1,2],\n",
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
