--- a/workshops/svm/065_SVM_Exercises.ipynb
+++ b/workshops/svm/065_SVM_Exercises.ipynb
@@ -25,10 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import cvxopt\n",
+    "from sklearn.datasets import load_iris\n",
+    "\n",
     "def build_kernel(data_set, kernel_type='linear'):\n",
     "    kernel = np.dot(data_set, data_set.T)\n",
     "    if kernel_type == 'rbf':\n",
@@ -39,7 +44,8 @@
     "                         + np.dot(b, (np.diag(kernel) * np.ones((1, objects_count))).T.T))\n",
     "        kernel = np.exp(kernel / (2. * sigma ** 2))\n",
     "    elif kernel_type == 'poly':\n",
-    "        pass # put your code here\n",
+    "        # put your code here\n",
+    "        kernel = np.power(np.dot(data_set.T, Y), d)\n",
     "    return kernel"
    ]
   },
@@ -56,38 +62,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
     "def choose_set_for_label(data_set, label):\n",
     "    # your code here\n",
+    "    train_data_set, test_data_set, train_labels, test_labels = train_test_split(data_set, label, test_size= 0.20, random_state = 20)\n",
+    "    train_labels[train_labels < 1] = -1\n",
+    "    test_labels[test_labels < 1] = -1\n",
     "    return train_data_set, test_data_set, train_labels, test_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_labels_count(data_set):\n",
-    "    return labels_count"
+    "    return len(data_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Use the code that we have implemented earlier:"
+    "# Use the code that we have implemented earlier:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 414,
    "outputs": [],
    "source": [
     "def train(train_data_set, train_labels, kernel_type='linear', C=10, threshold=1e-5):\n",
@@ -150,23 +158,62 @@
     "            y[j] += lambdas[i] * targets[i] * kernel[j, i]\n",
     "        y[j] += b\n",
     "    return np.sign(y)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 415,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  9.5935e+01 -1.2300e+03  2e+03  2e-01  3e-15\n",
+      " 1:  5.9022e+01 -1.1838e+02  2e+02  5e-03  3e-15\n",
+      " 2:  7.0118e+00 -1.6405e+01  2e+01  2e-16  3e-15\n",
+      " 3: -5.3275e-01 -3.7512e+00  3e+00  2e-16  1e-15\n",
+      " 4: -1.1808e+00 -1.8158e+00  6e-01  2e-16  5e-16\n",
+      " 5: -1.4245e+00 -1.6415e+00  2e-01  4e-16  4e-16\n",
+      " 6: -1.4877e+00 -1.5488e+00  6e-02  2e-16  3e-16\n",
+      " 7: -1.5061e+00 -1.5153e+00  9e-03  6e-16  3e-16\n",
+      " 8: -1.5097e+00 -1.5099e+00  2e-04  8e-16  3e-16\n",
+      " 9: -1.5098e+00 -1.5098e+00  2e-06  7e-16  3e-16\n",
+      "10: -1.5098e+00 -1.5098e+00  2e-08  6e-16  4e-16\n",
+      "Optimal solution found.\n",
+      "0.9\n"
+     ]
+    }
+   ],
    "source": [
-    "# modify this part \n",
+    "# modify this part\n",
+    "iris = load_iris()\n",
+    "data_set = iris.data\n",
+    "labels = iris.target\n",
+    "data_set = data_set[labels != 2]\n",
+    "labels = labels[labels != 2]\n",
+    "train_data_set, test_data_set, train_labels, test_labels = choose_set_for_label(data_set, labels)\n",
+    "objects_count = get_labels_count(train_data_set)\n",
+    "\n",
     "lambdas, support_vectors, support_vectors_id, b, targets, vector_number = train(train_data_set, train_labels, kernel_type='rbf')\n",
     "predicted = classify_rbf(test_data_set, train_data_set, lambdas, targets, b, vector_number, support_vectors, support_vectors_id)\n",
     "predicted = list(predicted.astype(int))\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
     "print(accuracy_score(predicted, test_labels))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
